kubernetes/oauth2-proxy/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
spec:
  gateways:
    - istio-system/petclinic-gateway
  hosts:
    - petclinic.ikarpov.net
  http:
    - match:
        - uri:
            prefix: /oauth2
      route:
        - destination:
            host: oauth2-proxy
            port:
              number: 4180
